--- a/style.css
+++ b/style.css
@@ -160,14 +160,23 @@ i {
 .btn-winningScore {top: 520px;}
 
 
-.dice {
+.dice-1{
     position: absolute;
     left: 50%;
-    top: 178px;
+    top: 278px;
+    transform: translateX(-50%);
+    height: 100px;
+    box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
+} 
+.dice-2 {
+    position: absolute;
+    left: 50%;
+    top: 158px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
 }
+    
 
 .winner { background-color: #f7f7f7; }
 .winner .player-name { font-weight: 400; color: #EB4D4D; }
