--- a/style.css
+++ b/style.css
@@ -121,9 +121,9 @@ button {
 
 
 input {
-    /*position: absolute;*/
-    left: 50%;
+    position: absolute;
     width: 100px;
+    left: 45%;
     background-color: #EB4D4D;
     margin-right: 15px;
     border: none;
@@ -155,15 +155,15 @@ i {
 }
 
 .btn-new { top: 45px;}
-.btn-roll { top: 403px;}
-.btn-hold { top: 467px;}
-.btn-winningScore {top: 520px;}
+.btn-roll { top: 380px;}
+.btn-hold { top: 440px;}
+.btn-winningScore {top: 500px;}
 
 
 .dice-1{
     position: absolute;
     left: 50%;
-    top: 158px;
+    top: 140px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
@@ -171,7 +171,7 @@ i {
 .dice-2 {
     position: absolute;
     left: 50%;
-    top: 278px;
+    top: 250px;
     transform: translateX(-50%);
     height: 100px;
     box-shadow: 0px 10px 60px rgba(0, 0, 0, 0.10);
