--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ button {
 input {
     position: absolute;
     width: 100px;
-    left: 45%;
+    left: 25%;
     background-color: #EB4D4D;
     margin-right: 15px;
     border: none;
@@ -157,7 +157,13 @@ i {
 .btn-new { top: 45px;}
 .btn-roll { top: 380px;}
 .btn-hold { top: 440px;}
-.btn-winningScore {top: 500px;}
+.btn-winningScore {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    top: 500px;
+    width: 200px;
+}
 
 
 .dice-1{
